--- a/Employees/reports/employees_information_templates.xml
+++ b/Employees/reports/employees_information_templates.xml
@@ -2,29 +2,24 @@
 <odoo>
     <template id="employees_information_template">
         <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="doc">
                 <t t-call="web.internal_layout">
                     <div class="page">
-                        <h1>Nhân Viên <t t-esc="doc.name"/></h1>
-                        <table class="table table-condensed">
+                        <table>
                             <thead>
                                 <tr>
                                     <th>Nhân Viên</th>
                                     <th>Vị trí</th>
-                                    <th>ID nhân viên</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr t-foreach="docs" t-as="employee">
                                     <td><t t-esc="employee.name"/></td>
                                     <td><t t-esc="employee.job_tittles"/></td>
-                                    <td><t t-esc="employee.ids_employees"/></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </t>
-            </t>
         </t>
     </template>
 </odoo>
