--- a/Employees/view/employees_information_views.xml
+++ b/Employees/view/employees_information_views.xml
@@ -7,7 +7,8 @@
 	<field name="arch" type="xml">
 		<tree>
 			<field name="name"/>
-			<field name="ids_employees"/>
+			<field name="avatar" widget='image'/>
+			<field name="id_employees"/>
 			<field name="gender" />
 			<field name="date_of_birth"/>
 		</tree>
@@ -33,10 +34,13 @@
 					<field name="avatar" widget="image" class="oe_avatar"/>
 					<group>
 							<field name="name" />
+							<field name="first_name" />
+							<field name="last_name" />
 							<field name="active" />
+							<field name="age" />
 							<field name="job_tittles"/>
 							<field name="department"/>
-							<field name="ids_employees"/>
+							<field name="id_employees"/>
 							<field name="manager"/>
 							<field name="user_id"/>
 					</group>
@@ -111,8 +115,9 @@
 	<field name="arch" type="xml">
 		<search>
 			<field name="name"/>
-			<field name="ids_employees"/>
+			<field name="id_employees"/>
 			<field name="department"/>
+			<filter name="name"/>
 		</search>
 	</field>
 </record>
