--- a/Employees/view/employees_leave_views.xml
+++ b/Employees/view/employees_leave_views.xml
@@ -9,9 +9,9 @@
 				<field name="state" decoration-danger="state == 'Refuse'" decoration-success="state == 'Validate1'" decoration-info="state == 'Draft'"/>
 				<field name="date_from"/>
 				<field name="date_to"/>
-				<field name="number_of_days"/>
+				<field name="number_of_days" sum="total days off"/>
+				<field name="name" />
 				
-				<field name="name"/>
 			</tree>
 		</field>
 	</record>
@@ -84,7 +84,7 @@
 							<field name="employees_id"/>
 							<field name="user_id"/>
 							<field name="manager"/>
-							<field name="name"/>					
+							<field name="name"/>
 							</group>
 				</sheet>
 			</form>
@@ -104,7 +104,16 @@
 		</field>
 	</record>
 	
-	
+	<record id="employees_leave_search" model="ir.ui.view">
+		<field name="name">Employees Attendance Search</field>
+		<field name="model">employees.leave</field>
+		<field name="arch" type="xml">
+			<search>
+				<field name="date_from" />
+				<filter name="date_from" date="date_from" />
+			</search>
+		</field>
+	</record>
 	
 	
 	<record id="employees_leave_actions" model="ir.actions.act_window">
